Add temporary link to google play

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                             <!--
                             <a class="btn-solid-lg page-scroll" href="#your-link"><i class="fab fa-apple"></i>APP STORE</a>
                             -->
-                            <a class="btn-solid-lg page-scroll" href="#your-link"><i class="fab fa-google-play"></i>PLAY STORE</a>
+                            <a class="btn-solid-lg page-scroll" href="https://play.google.com/store/search?q=guide%20du%20t%C3%A9l%C3%A9travail&c=apps&hl=en"><i class="fab fa-google-play"></i>PLAY STORE</a>
                         </div>
                     </div> <!-- end of col -->
                     <div class="col-lg-6">
