--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                 <div class="col-lg-12">
                     <h2>CONTACT</h2>
                     <ul class="list-unstyled li-space-lg">
-                        <li class="address">N'hésiter pas à nous contacter par email. Oui, on lit vos email!</li>
+                        <li class="address">N'hésiter pas à nous contacter par email. Oui, nous lisons vos email!</li>
                         <li><i class="fas fa-map-marker-alt"></i>Paris,France</li>
                         <li><i class="fas fa-envelope"></i><a class="blue" href="mailto:hello@algora-labs.com">hello@algora-labs.com</a></li>
                     </ul>
