--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                     <div class="col-lg-6">
                         <div class="text-container">
                             <h1>APPLICATION MOBILE <br>POUR LES <span id="js-rotating">EMPLOYES, MANAGERS, ENSEIGNANTS</span></h1>
-                            <p class="p-large">Le guide du télétravail vous facilite le choix de vos outils de travail à distance en vous présentant une liste d'outils à ne pas passer à côté !</p>
+                            <p class="p-large">Le guide du télétravail vous facilite le choix de vos outils de travail à distance en vous présentant une liste d'outils à ne pas passer à côté ! Tous unis contre le covid-19.</p>
                             <!--
                             <a class="btn-solid-lg page-scroll" href="#your-link"><i class="fab fa-apple"></i>APP STORE</a>
                             -->
